--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.12.0",
     "@types/google-protobuf": "^3.7.2",
+    "@vue/cli": "^4.3.1",
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.1",
     "google-protobuf": "^3.11.4",
     "protobufjs": "^6.9.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-json-viewer": "^2.2.11",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
@@ -33,6 +36,8 @@
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "typescript": "~3.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
