--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.13.1",
     "google-protobuf": "^3.11.4",
     "protobufjs": "^6.9.0",
+    "ts-protoc-gen": "^0.12.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-json-viewer": "^2.2.11",
